
TODO: * 1.2.11 install (/usr/local/rrdtool-1..)
      * perl install
      * prefix configurable

0.13 2005/08/07
    (ms) Added line, area, tick, and shift to graph method.

0.12 (07/07/2005)
    (ms) Steve van der Burg added vrule, comment, and font options
    (ms) Makefile.PL dependencies version number changed from undef to 0
    (ms) Added 'rigid' option to graph.

0.11 (01/05/2005)
    (ms) Added suggestion by Richard Lippmann <lippmann@sprachtheorie.de>
         to allow for invisible graphs, just used as base for later 
         'cdef' calculations. Since leaving 'type' out will have
         RRDTool::OO default to 'line', type => 'hidden' is used to
         indicate the graph shouldn't be drawn. 
    (ms) Added gprint/print options for graphs

0.10 (11/20/2004)
    (ms) Added legends to graph()
    (ms) Maxence Gerbedoen <maxxenceg@wanadoo.fr> suggested a patch to 
         add 'cdef' functionality. Added slightly differently.

0.09 (10/08/2004)
    (ms) Fixed bug [cpan #7897]. new() now accepts a raise_error setting.

0.08 (09/24/2004)
    (ms) Added documentation for multiple data sources and archives.
    (ms) Martin Kurahaupo <martin@kurahaupo.gen.nz> added a patch
         to prevent the test suite from failing when run as root
         because a test file can't be write-protected.
    (ms) Chris Fedde <cfedde@denver.pm.org> provided a patch to 
         structure ::info's output more perl-like. Got input from
         perlmonks (thanks nobull!) on how to efficiently transform
         RRDTools info output into Perl data structures.

0.07 (08/15/2004)
    (ms) doc and test fixes for new rrdtool release 1.0.49. dump()
         and restore() are now supported.

0.06 (06/21/2004)
    (ms) added 'start' param in create() docs
    (ms) JJ Knitis <jj@dangercreative.com> provided a fix for
         multiple 'color' settings in graph. Added new graph/color
         syntax.

0.05 (05/26/2004)
    (ms) added support for dump() and restore(). Test cases in